# zuul

./: .babelrc  .coveragerc  .dockerignore  .eslintrc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  AUTHORS  Dockerfile  MANIFEST.in  NEWS.rst  README  README.md  README.rst  TESTING.rst  bindep.txt  openstack-common.conf  package.json  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  tsconfig.json  tslint.json  webpack.config.js  zuul-server
doc/: Makefile  requirements.txt
doc/source/: admin-config.rst  client.rst  cloner.rst  conf.py  configuration.rst  connections.rst  datamodel.rst  developer.rst  encryption.rst  executors.rst  gating.rst  glossary.rst  governance.rst  index.rst  internals.rst  launchers.rst  merger.rst  project-config.rst  quick-start.rst  reporters.rst  statsd.rst  triggers.rst  zuul.rst
etc/: clonemap.yaml-sample  layout.yaml-sample  status.html  status.js  zuul-executor.service  zuul-scheduler.service  zuul-web.service  zuul.conf-sample
etc/status/: .gitignore  .jshintrc  README.rst  fetch-dependencies.sh
etc/zuul-executor.service.d/: centos.conf
etc/zuul-scheduler.service.d/: centos.conf
etc/zuul-web.service.d/: centos.conf
playbooks/: base-post.yaml  base-pre.yaml  post.yaml  python-linters.yaml  tox-cover.yaml  tox-docs.yaml  tox-linters.yaml  tox-post.yaml  tox-py27.yaml  zuul-migrate.yaml
playbooks/base/: post.yaml
playbooks/dashboard/: multi.yaml  run.yaml
playbooks/quick-start/: localtest.yaml  main.yaml  post.yaml  run.yaml
playbooks/tox/: cover.yaml  docs.yaml  linters.yaml  post.yaml  pre.yaml  run.yaml  tarball-post.yaml  tarball.yaml
playbooks/zuul-migrate/: post.yaml  run.yaml
playbooks/zuul-stream/: functional.yaml  post-ara.yaml  post.yaml  pre.yaml
releasenotes/notes/: add-artifacts-0718af34ca6165aa.yaml  add-host-ansible-python-interpreter-9592aef8d2c90b3e.yaml  allowed-connections-244fb22569090fb2.yaml  allowed-labels-d3ca17f3c7e167c8.yaml  allowed-projects-8f6f0cb42ffd0a88.yaml  ansible-2.6-12d2f8222327dfbc.yaml  ansible-2.7-e4db1ec0440446be.yaml  ansible-2.7-uri-module-3143c326474740ee.yaml  ansible-default-version-4d4e622b0be39e12.yaml  artifact-format-2de4b9c038e28115.yaml  artifacts-buildset-19a94b7630db4f30.yaml  branch-protection-f79d97c4e6c0b05f.yaml  broken-config-f41fda98f01a3f4e.yaml  cgroups-governor-430a565cae0ef104.yaml  client-check-tenant-config-4b86bfd5bf3572cb.yaml  config-memory-e849097ee171a534.yaml  default-ansible-9983f6e8f31bf9cb.yaml  driver-mqtt-28f62e8510863b40.yaml  encrypt-file-pubkey-a4830c3573dee7f0.yaml  executor-zones-54318b8ea2f7e195.yaml  fail-jobs-when-requirement-not-met-5e37516c241020f3.yaml  (+58 more)
tests/: base.py  encrypt_secret.py  fakegithub.py  make_playbooks.py  print_layout.py  test_change_matcher.py  test_clonemapper.py  test_cloner.py  test_cloner_cmd.py  test_connection.py  test_daemon.py  test_gerrit.py  test_layoutvalidator.py  test_merger_repo.py  test_model.py  test_nodepool.py  test_openstack.py  test_reporter.py  test_requirements.py  test_scheduler.py  test_source.py  test_stack_dump.py  test_trigger.py  test_v3.py  test_webapp.py  test_zuultrigger.py
tools/: 018D05F5.gpg  docker-compose.yaml  encrypt_secret.py  github-debugging.py  install-js-repos-rpm.sh  install-js-tools.sh  node_usage.py  nodepool-integration-setup.sh  nodepool-integration-test.sh  pip-requires  pip.sh  run-migration.sh  test-logs.sh  test-requires  test-setup-docker.sh  test-setup.sh  trigger-job.py  update-storyboard.py  zuul-changes.py  zuul-clear-refs.py  zuul-cloner-shim.py
web/: .eslintrc  __init__.py  app-routing.module.ts  app.component.ts  app.module.ts  build  dashboard.js  jquery.zuul.js  main.js  main.ts  package.json  status.js  stream.js  util.js  util.ts
web/jobs/: job.ts  (+3 more)
zuul/: _setup_hook.py  alembic_reporter.ini  change_matcher.py  configloader.py  exceptions.py  layoutvalidator.py  merger.py  model.py  nodepool.py  rpcclient.py  rpclistener.py  scheduler.py  version.py  web.py  webapp.py  zk.py
(+1351 files in other folders)
