[metadata]
name = zuul
summary = A Project Gating System
description-file =
    README.rst
author = Zuul Team
author-email = zuul-discuss@lists.zuul-ci.org
home-page = https://zuul-ci.org/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[pbr]
warnerrors = True

[global]
setup-hooks =
  zuul._setup_hook.setup_hook

[entry_points]
console_scripts =
    zuul-scheduler = zuul.cmd.scheduler:main
    zuul-merger = zuul.cmd.merger:main
    zuul = zuul.cmd.client:main
    zuul-cloner = zuul.cmd.cloner:main
    zuul-executor = zuul.cmd.executor:main
    zuul-bwrap = zuul.driver.bubblewrap:main
    zuul-web = zuul.cmd.web:main
    zuul-migrate = zuul.cmd.migrate:main
    zuul-fingergw = zuul.cmd.fingergw:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[extras]
mysql_reporter=
    PyMySQL
migrate=
    jenkins-job-builder==1.6.2
